# auto-assigner-poc

./: README.md  closed_prs.json  test-pr-1.txt
.github/: auto-assigner-config-test.yaml  auto-assigner-config.yaml
.github/workflows/: auto-assign-code-reviewer.yml  auto-assign-reviewers.yml  auto-assigner-test-all.yml
.github/workflows/mock-events/: issue_comment_lgtm.json  s03_skip_non_lgtm_review.json  s04_backend_intern_draft_pr.json  s05_regular_with_devops_keyword.json  s05_staged_cr_assignment.json  s11_wanny_direct_cr.json  s12_devops_keyword_in_ci_yml.json  s15_skip_peer_label.json  s21_peer_shortage_one_available.json  s22_peer_empty_goes_to_cr.json
tools/auto-assigner/: .gitignore  README.md  pyproject.toml
tools/auto-assigner/config/: config.yaml
tools/auto-assigner/src/auto_assigner/: __init__.py  __main__.py  assigner.py  config.py  event_parser.py  github_client.py  main.py  rules.py  selector.py  slack.py  staged.py
tools/auto-assigner/tests/: conftest.py  test_assigner.py  test_event_parser.py  test_main.py  test_rules.py  test_selector.py  test_slack.py  test_staged.py
tools/auto-assigner/tests/fixtures/: backend_intern_lgtm.json  devops_lgtm.json  frontend_regular_lgtm.json  ian_no_peer_lgtm.json  non_lgtm_comment.json  skip_peer_lgtm.json
